--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -17,7 +17,7 @@
         />
         <link rel="manifest" href="/site.webmanifest" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>APIC Box</title>
+        <title>APIC Sentelette</title>
     </head>
     <body class="light">
         <div id="root"></div>
