--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <meta name="robots" content="index, follow" />
+        <meta
+            name="googlebot"
+            content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1"
+        />
         <link
             rel="icon"
             type="image/png"
