feat: add analytics script for enhanced tracking and performance monitoring

--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="fr">
     <head>
+        <script
+            defer
+            src="https://analytics.belugabox.net/script.js"
+            data-website-id="18d164a1-7c87-48bc-ad6a-94dda6484043"
+        ></script>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
