feat: add NotFound page with custom 404 message and background image

--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -5,6 +5,7 @@
             defer
             src="https://analytics.belugabox.net/script.js"
             data-website-id="18d164a1-7c87-48bc-ad6a-94dda6484043"
+            data-domains="apic-sentelette.net"
         ></script>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
